--- a/packages/sanity-suite/.env.example
+++ b/packages/sanity-suite/.env.example
@@ -3,6 +3,7 @@ DATAPLANE_URL=
 CONFIG_SERVER_HOST=
 SDK_CDN_VERSION_PATH_PREFIX=
 DEST_SDK_BASE_URL=
+BASE_CDN_URL=
 
 # v3
 # PLUGINS_SDK_BASE_URL=
