--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,7 +28,7 @@ sonar.test.inclusions=**/__tests__/**/*
 sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg
 
 # Coverage config
-sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__fixtures__/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,packages/analytics-js-common/src/constants/integrations/**/*
+sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__fixtures__/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,packages/analytics-js-common/src/constants/integrations/**/*,packages/sanity-suite/**/*,packages/loading-scripts/**/*
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
