--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "lint-staged": "16.1.2",
     "madge": "8.0.0",
     "msw": "2.10.4",
+    "npm-run-all": "4.1.5",
     "nx": "21.2.3",
     "patch-package": "8.0.0",
     "prettier": "3.6.2",
