--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -55,7 +55,7 @@
     "build:npm:v1.1": "rollup -c --environment DISTRIBUTION_TYPE:npm,SDK_VERSION:v1.1,BUILD_TYPE:modern",
     "build:npm": "rollup -c --environment DISTRIBUTION_TYPE:npm,SDK_VERSION:v3,BUILD_TYPE:modern",
     "build:npm:bundled": "rollup -c --environment DISTRIBUTION_TYPE:npm_bundled,SDK_VERSION:v3,BUILD_TYPE:modern",
-    "build:all": "npm run build:cdn:v1.1 && npm run build:cdn && npm run build:npm:v1.1 && npm run build:npm && rimraf -rf ./dist/dts"
+    "build:all": "npm-run-all --parallel build:cdn:v1.1 build:cdn build:npm:v1.1 build:npm"
   },
   "author": "RudderStack",
   "license": "Elastic-2.0",
@@ -66,7 +66,9 @@
     "object-path": "0.11.8",
     "ramda": "0.31.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "npm-run-all": "4.1.5"
+  },
   "overrides": {},
   "browserslist": {
     "production": [
