chore: speed up checks

--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "check:size:json:pre-commit:affected": "nx affected -t check:size:json --base=HEAD --verbose",
     "check:size:json:ci": "nx run-many -t check:size:json",
     "check:circular": "nx run-many -t check:circular --verbose",
+    "check:circular:ci": "nx affected -t check:circular --base=$BASE_REF --verbose",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
     "check:duplicates": "nx run-many -t check:duplicates --verbose",
+    "check:duplicates:ci": "nx affected -t check:duplicates --base=$BASE_REF --verbose",
     "check:security": "npm audit --recursive --audit-level=high --omit=dev",
     "check:pub": "nx run-many -t check:pub --verbose",
     "check:pub:ci": "nx affected -t check:pub --verbose --base=$BASE_REF",
