--- a/.github/workflows/security-code-quality-and-bundle-size-checks.yml
+++ b/.github/workflows/security-code-quality-and-bundle-size-checks.yml
@@ -30,15 +30,23 @@ jobs:
           node-version-file: '.nvmrc'
           cache: 'npm'
 
+      - name: Check for affected projects
+        id: check_affected
+        run: |
+          AFFECTED_PROJECTS=$(npx nx show projects --affected --base=$BASE_REF | tr '\n' ',')
+          echo "Affected projects: $AFFECTED_PROJECTS"
+          echo "affected_projects=$AFFECTED_PROJECTS" >> $GITHUB_OUTPUT
+
       - name: Execute bundle size checks
         uses: rudderlabs/github-action-check-size-limit@v2.13.0
+        if: ${{ steps.check_affected.outputs.affected_projects != '' }}
         env:
           HUSKY: 0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           install_script: setup:ci
           build_script: check:size:build
-          script: npm run check:size:json:ci --silent -- --output-style=static --silent=true --exclude=@rudderstack/analytics-js-sanity-suite
+          script: npm run check:size:json:ci --silent -- --output-style=static --silent=true --exclude=@rudderstack/analytics-js-sanity-suite,${{ steps.check_affected.outputs.affected_projects }}
           is_monorepo: true
 
   security-code-quality-checks:
@@ -66,8 +74,8 @@ jobs:
 
       - name: Execute code quality checks
         run: |
-          npm run check:circular
-          npm run check:duplicates
+          npm run check:circular:ci
+          npm run check:duplicates:ci
 
       - name: Build the project
         run: |
