--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -237,10 +237,12 @@ jobs:
       # are replaced with the old ones in the versioned directory.
       - name: Invalidate CloudFront cache for all the SDK artifacts (versioned directory)
         if: ${{ inputs.environment == 'production' }}
+        env:
+          CF_DIST_ID: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
         run: |
-          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --paths "/${{ env.CURRENT_VERSION_VALUE }}*" --query "Invalidation.Id" --output text)
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ env.CF_DIST_ID }} --paths "/${{ env.CURRENT_VERSION_VALUE }}*" --query "Invalidation.Id" --output text)
 
-          aws cloudfront wait invalidation-completed --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --id "$invalidation_id"
+          aws cloudfront wait invalidation-completed --distribution-id ${{ env.CF_DIST_ID }} --id "$invalidation_id"
 
       - name: Copy SDK plugins and integrations artifacts to S3
         # IMPORTANT: We're deliberately avoiding copying these artifacts for the production environment
@@ -280,10 +282,12 @@ jobs:
           aws s3 cp ${{ env.CORE_ARTIFACTS_BASE_PATH }}/modern/iife/ $s3_path_prefix/modern/ $copy_args
 
       - name: Invalidate CloudFront cache for all the SDK artifacts
+        env:
+          CF_DIST_ID: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
         run: |
-          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --paths "/${{ inputs.s3_dir_path }}*" --query "Invalidation.Id" --output text)
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ env.CF_DIST_ID }} --paths "/${{ inputs.s3_dir_path }}*" --query "Invalidation.Id" --output text)
           
-          aws cloudfront wait invalidation-completed --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --id "$invalidation_id"
+          aws cloudfront wait invalidation-completed --distribution-id ${{ env.CF_DIST_ID }} --id "$invalidation_id"
 
       - name: Send message to Slack channel
         id: slack
@@ -371,10 +375,12 @@ jobs:
           aws s3 cp $integration_sdks_path_prefix/modern/js-integrations/ $s3_path_prefix/modern/js-integrations/ $copy_args
 
       - name: Invalidate CloudFront cache for all the legacy SDK artifacts
+        env:
+          CF_DIST_ID: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
         run: |
-          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --paths "/${{ inputs.s3_dir_path_legacy }}*" --query "Invalidation.Id" --output text)
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ env.CF_DIST_ID }} --paths "/${{ inputs.s3_dir_path_legacy }}*" --query "Invalidation.Id" --output text)
 
-          aws cloudfront wait invalidation-completed --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --id "$invalidation_id"
+          aws cloudfront wait invalidation-completed --distribution-id ${{ env.CF_DIST_ID }} --id "$invalidation_id"
 
       - name: Copy legacy SDK artifacts to S3 (versioned directory)
         if: ${{ inputs.environment == 'production' }}
@@ -398,7 +404,9 @@ jobs:
       # These version directory artifacts of legacy SDK are not actually used in production but to be in parity with the v3 SDK 
       # we're performing the same operation.
       - name: Invalidate CloudFront cache for all the legacy SDK artifacts (versioned directory)
+        env:
+          CF_DIST_ID: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
         run: |
-          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --paths "/${{ env.CURRENT_VERSION_V1_VALUE }}*" --query "Invalidation.Id" --output text)
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ env.CF_DIST_ID }} --paths "/${{ env.CURRENT_VERSION_V1_VALUE }}*" --query "Invalidation.Id" --output text)
 
-          aws cloudfront wait invalidation-completed --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --id "$invalidation_id"
+          aws cloudfront wait invalidation-completed --distribution-id ${{ env.CF_DIST_ID }} --id "$invalidation_id"
