--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -179,10 +179,12 @@ jobs:
 
       - name: Invalidate CloudFront cache for assets
         if: ${{ inputs.environment == 'production' }}
+        env:
+          CF_DIST_ID: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
         run: |
-          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --paths "/adobe-analytics-js*" --query "Invalidation.Id" --output text)
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id "${{ env.CF_DIST_ID }}" --paths "/adobe-analytics-js*" --query "Invalidation.Id" --output text)
 
-          aws cloudfront wait invalidation-completed --distribution-id ${{ secrets.AWS_CF_DISTRIBUTION_ID }} --id "$invalidation_id"
+          aws cloudfront wait invalidation-completed --distribution-id "${{ env.CF_DIST_ID }}" --id "$invalidation_id"
 
       - name: Determine cache policy based on environment
         id: cache_policy
@@ -240,9 +242,9 @@ jobs:
         env:
           CF_DIST_ID: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
         run: |
-          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ env.CF_DIST_ID }} --paths "/${{ env.CURRENT_VERSION_VALUE }}*" --query "Invalidation.Id" --output text)
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id "${{ env.CF_DIST_ID }}" --paths "/${{ env.CURRENT_VERSION_VALUE }}*" --query "Invalidation.Id" --output text)
 
-          aws cloudfront wait invalidation-completed --distribution-id ${{ env.CF_DIST_ID }} --id "$invalidation_id"
+          aws cloudfront wait invalidation-completed --distribution-id "${{ env.CF_DIST_ID }}" --id "$invalidation_id"
 
       - name: Copy SDK plugins and integrations artifacts to S3
         # IMPORTANT: We're deliberately avoiding copying these artifacts for the production environment
@@ -285,9 +287,9 @@ jobs:
         env:
           CF_DIST_ID: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
         run: |
-          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ env.CF_DIST_ID }} --paths "/${{ inputs.s3_dir_path }}*" --query "Invalidation.Id" --output text)
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id "${{ env.CF_DIST_ID }}" --paths "/${{ inputs.s3_dir_path }}*" --query "Invalidation.Id" --output text)
           
-          aws cloudfront wait invalidation-completed --distribution-id ${{ env.CF_DIST_ID }} --id "$invalidation_id"
+          aws cloudfront wait invalidation-completed --distribution-id "${{ env.CF_DIST_ID }}" --id "$invalidation_id"
 
       - name: Send message to Slack channel
         id: slack
@@ -378,9 +380,9 @@ jobs:
         env:
           CF_DIST_ID: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
         run: |
-          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ env.CF_DIST_ID }} --paths "/${{ inputs.s3_dir_path_legacy }}*" --query "Invalidation.Id" --output text)
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id "${{ env.CF_DIST_ID }}" --paths "/${{ inputs.s3_dir_path_legacy }}*" --query "Invalidation.Id" --output text)
 
-          aws cloudfront wait invalidation-completed --distribution-id ${{ env.CF_DIST_ID }} --id "$invalidation_id"
+          aws cloudfront wait invalidation-completed --distribution-id "${{ env.CF_DIST_ID }}" --id "$invalidation_id"
 
       - name: Copy legacy SDK artifacts to S3 (versioned directory)
         if: ${{ inputs.environment == 'production' }}
@@ -407,6 +409,6 @@ jobs:
         env:
           CF_DIST_ID: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
         run: |
-          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id ${{ env.CF_DIST_ID }} --paths "/${{ env.CURRENT_VERSION_V1_VALUE }}*" --query "Invalidation.Id" --output text)
+          invalidation_id=$(AWS_MAX_ATTEMPTS=10 aws cloudfront create-invalidation --distribution-id "${{ env.CF_DIST_ID }}" --paths "/${{ env.CURRENT_VERSION_V1_VALUE }}*" --query "Invalidation.Id" --output text)
 
-          aws cloudfront wait invalidation-completed --distribution-id ${{ env.CF_DIST_ID }} --id "$invalidation_id"
+          aws cloudfront wait invalidation-completed --distribution-id "${{ env.CF_DIST_ID }}" --id "$invalidation_id"
