chore: do not run when no projects are impacted

--- a/.github/workflows/security-code-quality-and-bundle-size-checks.yml
+++ b/.github/workflows/security-code-quality-and-bundle-size-checks.yml
@@ -70,6 +70,7 @@ jobs:
 
       - name: Execute bundle size checks
         uses: rudderlabs/github-action-check-size-limit@v3.0.0
+        if: ${{ needs.get-affected-projects.outputs.affected_projects != '' }}
         env:
           HUSKY: 0
         with:
@@ -112,6 +113,7 @@ jobs:
           npm run check:pub:ci
 
       - name: Execute code quality checks
+        if: ${{ needs.get-affected-projects.outputs.affected_projects != '' }}
         run: |
           npm run check:circular -- --projects=${{ needs.get-affected-projects.outputs.affected_projects }}
           npm run check:duplicates -- --projects=${{ needs.get-affected-projects.outputs.affected_projects }}
